[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
rand = "0.8"
ngrok = { version="0.13", features=["axum"] }
axum = "0.6"
anyhow = "1.0"
urlencoding = "2.1.3"
stellar-xdr = { version = "=22.0.0-rc.1.1", default-features = false, features = [
    "next",
    "serde",
    "base64",
] }
ed25519-dalek = "2.1.1"
sha2 = "0.10.7"
stellar-strkey = "0.0.8"
